// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchIcon /> default matches the snapshot 1`] = `
<svg
  aria-label={null}
  fill="none"
  height="10"
  viewBox="0 0 15 15"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 14L10.5 10.5"
    stroke="#333"
    stroke-linecap="round"
    stroke-width="2"
  />
  <circle
    cx="6.3"
    cy="6.3"
    r="5.3"
    stroke="#333"
    stroke-width="2"
  />
</svg>
`;

exports[`<SearchIcon /> with some props matches the snapshot 1`] = `
<svg
  aria-label={null}
  fill="none"
  height="10"
  viewBox="0 0 15 15"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="path-class"
    d="M14 14L10.5 10.5"
    stroke="red"
    stroke-linecap="round"
    stroke-width="2"
  />
  <circle
    className="circle-class"
    cx="6.3"
    cy="6.3"
    r="5.3"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`<SearchIcon /> with some props with no \`title\` matches the snapshot 1`] = `
<svg
  aria-label={null}
  fill="none"
  height="10"
  viewBox="0 0 15 15"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 14L10.5 10.5"
    stroke="#333"
    stroke-linecap="round"
    stroke-width="2"
  />
  <circle
    cx="6.3"
    cy="6.3"
    r="5.3"
    stroke="#333"
    stroke-width="2"
  />
</svg>
`;
